--- a/src/components/VendingMachine.scss
+++ b/src/components/VendingMachine.scss
@@ -25,7 +25,7 @@
     color: white;
     cursor: pointer;
     font-size: 14px;
-    margin-left: 5px;
+    margin: 0.5rem;
     padding: 8px 16px;
 
     &:hover {
